# OS.KP-Server-

./: CMakeLists.txt  CPacket.cpp  CPacket.hpp  EncryptedPacket.hpp  Encryption.cpp  Encryption.hpp  Interface.cpp  Interface.hpp  README.md  Server.cpp  Server.h  Server.hpp  ServerNetwork.cpp  ServerNetwork.hpp  main.cpp
dependencies/: CMakeLists.txt
dependencies/imgui-sfml/: CMakeLists.txt
dependencies/openssl/: CMakeLists.txt
dependencies/sfml/: CMakeLists.txt
